<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/inicio"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/productos"
            android:title="@string/menu_product"/>
        <item
            android:id="@+id/nav_service"
            android:icon="@drawable/servicios"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_branch"
            android:icon="@drawable/sucursales"
            android:title="@string/menu_slideshow" />
    </group>
</menu>