<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.retos.r1.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_service"
        android:name="com.retos.r1.ui.service.ServiceFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_service" />

    <fragment
        android:id="@+id/nav_branch"
        android:name="com.retos.r1.ui.branch.BranchFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_branch" />

    <fragment
        android:id="@+id/nav_product"
        android:name="com.retos.r1.ui.product.ProductFragment"
        android:label="@string/menu_product"
        tools:layout="@layout/fragment_product" />

</navigation>