<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.product.ProductFragment">

    <ImageView
        android:id="@+id/imageViewProduct"
        android:layout_width="412dp"
        android:layout_height="137dp"
        android:src="@drawable/imgproductos" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageProduct"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="50px"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/product1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewProduct"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/titleProductOne" />

                    <TextView
                        android:id="@+id/textViewProductDes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/DescriptionProductOne" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageProduct1"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="50px"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/product2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewProduct1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/titleProductTwo" />

                    <TextView
                        android:id="@+id/textViewProductDes1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/DescriptionProductTwo" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageProduct2"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="50px"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/product3" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewProduct2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/titleProductThree" />

                    <TextView
                        android:id="@+id/textViewProductDes2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/DescriptionProductThree" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageProduct3"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="50px"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/product1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewProduct3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/titleProductOne" />

                    <TextView
                        android:id="@+id/textViewProductDes3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/DescriptionProductOne" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>